# big-data-analysis-project

./: README.md  pyproject.toml  requirements.txt
big_data_analysis/: __init__.py  kafka_influx_consumer.py  reddit_api_producer.py  reddit_api_worker.py  reddit_kafka_stream_processor.py
docker/: docker-compose.yaml
scripts/: consumer_script.py  processor_script.py  producer_script.py  run_stream.py
tests/: reddit_api_worker.py
